# claude-marketplace

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  Rough.js Plugin -- Source- https---api.observablehq.com-@tututwo-rough-js-plugin-for-observable.md  epistemic-plugin-spec.md  plan-pro — Claude Code Handoff Spec.md  plugin-server-spec.md  resync-codex-plugin.sh  sync-plugins.sh  theorem-context-py  theorem-context-ts
plan-pro/: AGENTS.md  CLAUDE.md  MIGRATION.md  install.sh  pyproject.toml
plan-pro/.claude-plugin/: plugin.json
plan-pro/agents/: capture-agent.md  clarifier.md  concision-enforcer.md  contract-first-architect.md  decision-scribe.md  divergent-thinker.md  domain-router.md  drift-auditor.md  event-mapper.md  executor.md  functional-decomposer.md  implementer.md  plan-reviewer.md  plan-writer.md  planner.md  problem-framer.md  quality-reviewer.md  researcher.md  retrofitter.md  scope-gatekeeper.md  spec-coverage-gate.md  spec-reviewer.md  walking-skeleton-planner.md
plan-pro/commands/: brainstorm.md  execute.md  learn.md  plan.md  research.md  retrofit.md  review.md  write-plan.md
plan-pro/knowledge/: manifest.json
plan-pro/patterns/: adr-template.md  bite-sized-tasks.md  c4-context-sketch.md  contract-first-design.md  divergent-convergent.md  event-storming-lite.md  functional-decomposition.md  multi-file-plans.md  no-placeholders.md  two-stage-review.md  walking-skeleton.md
plan-pro/scripts/: __init__.py  grounding.py  markdown.py  models.py  plan_parser.py  plan_pro.py  prompts.py  run.sh  validators.py
plan-pro/templates/: adr.md  (+9 more)
(+2592 files in other folders)
